# autoschematic-connector-kafka

./: Cargo.toml  autoschematic.connector.ron
src/: addr.rs  client.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  resource.rs  task.rs
src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
test_env/: docker-compose.yaml
