[package]
name = "autoschematic-connector-kafka"
description = "An Autoschematic connector for Kafka"
license = "AGPL-3.0"
version = "0.11.0"
edition = "2024"

[lib]
name = "autoschematic_connector_kafka"
path = "src/lib.rs"

[[bin]]
name = "autoschematic-connector-kafka"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-core = { path = "../../autoschematic/autoschematic-core", version = "0.11.0" }
autoschematic-macros = { path = "../../autoschematic/autoschematic-macros", version = "0.11.0" }
ron = { version = "0.12.0", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
serde_json = "1.0.138"
similar = { version = "2.7.0", features = ["unicode"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
uuid = { version = "1.15.1", features = ["v4"] }
lazy_static = "1.5.0"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
rdkafka-autoschematic-fork = { version = "0.38", features = [
    "cmake-build",
    "ssl",
    "sasl",
    "gssapi",
], path = "/home/pete/prog/rust-rdkafka/" }
reqwest = { version = "0.12.0", features = ["json"] }
futures-util = "0.3.31"
documented = "0.9.1"
